--- a/.classpath
+++ b/.classpath
@@ -6,47 +6,47 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/javaFX/javafx-sdk-17.0.7/lib/javafx.base.jar">
+	<classpathentry kind="lib" path="C:/Users/jessy/Desktop/University/Semester 5/ooad/javafx-sdk-17.0.7/lib/javafx.base.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/javaFX/javafx-sdk-17.0.7/lib/javafx.controls.jar">
+	<classpathentry kind="lib" path="C:/Users/jessy/Desktop/University/Semester 5/ooad/javafx-sdk-17.0.7/lib/javafx.controls.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/javaFX/javafx-sdk-17.0.7/lib/javafx.fxml.jar">
+	<classpathentry kind="lib" path="C:/Users/jessy/Desktop/University/Semester 5/ooad/javafx-sdk-17.0.7/lib/javafx.fxml.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/javaFX/javafx-sdk-17.0.7/lib/javafx.graphics.jar">
+	<classpathentry kind="lib" path="C:/Users/jessy/Desktop/University/Semester 5/ooad/javafx-sdk-17.0.7/lib/javafx.graphics.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/javaFX/javafx-sdk-17.0.7/lib/javafx.media.jar">
+	<classpathentry kind="lib" path="C:/Users/jessy/Desktop/University/Semester 5/ooad/javafx-sdk-17.0.7/lib/javafx.media.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/javaFX/javafx-sdk-17.0.7/lib/javafx.swing.jar">
+	<classpathentry kind="lib" path="C:/Users/jessy/Desktop/University/Semester 5/ooad/javafx-sdk-17.0.7/lib/javafx.swing.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/javaFX/javafx-sdk-17.0.7/lib/javafx.web.jar">
+	<classpathentry kind="lib" path="C:/Users/jessy/Desktop/University/Semester 5/ooad/javafx-sdk-17.0.7/lib/javafx.web.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/javaFX/javafx-sdk-17.0.7/lib/javafx-swt.jar">
+	<classpathentry kind="lib" path="C:/Users/jessy/Desktop/University/Semester 5/ooad/javafx-sdk-17.0.7/lib/javafx-swt.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Vallen Charissa/Downloads/mysql-connector-java-8.0.24.jar">
+	<classpathentry kind="lib" path="C:/Users/jessy/Desktop/University/Semester 5/ooad/mysql-connector-java-8.0.24.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
